# Poker-AI

./: .gitignore  README.md  TX_Poker.ipynb  agent.py  data.csv  data_comportement.csv  data_gagnant.csv  data_trial.csv  gagnant.txt  main.py  pyproject.toml  random_test.py  range_analysis.py  requirements.txt  simu_bots.py  test.py
PokerPlus/Agents/: BRS.py  Good_Agents.py  MCTS.py  agent_comportement.py  agent_outs.py  agents_bots.py  fonctions_auxiliaires.py  meta.py  old.py  paranoid.py
PokerPlus/Comportement/: comportement.py  simu_comportement.py
PokerPlus/DeepCFR/: deep_cfr.py  (+4 more)
agents/: agent.py  agent_outs.py  agents.py  comportement.py  data.py  fonctions_auxiliaires.py  simu_bots.py  simu_bots2.py  stat.py  stat_tournoi.py
agents [ancien]/: agent_outs.py  agents_bots.py  range_analysis.py  simu_bots.py  simu_bots2.py  stat.py
pgns/: texas(1).pgn  texas(2).pgn  texas(3).pgn  texas.pgn
res/: texas(1).pgn  texas(10).pgn  texas(100).pgn  texas(1000).pgn  texas(1001).pgn  texas(1002).pgn  texas(1003).pgn  texas(1004).pgn  texas(1005).pgn  texas(1006).pgn  texas(1007).pgn  texas(1008).pgn  texas(1009).pgn  texas(101).pgn  texas(1010).pgn  texas(1011).pgn  texas(1012).pgn  texas(1013).pgn  texas(1014).pgn  texas(1015).pgn  texas(1016).pgn  texas(1017).pgn  texas(1018).pgn  texas(1019).pgn  texas(102).pgn  texas(1020).pgn  texas(1021).pgn  texas(1022).pgn  texas(1023).pgn  texas(1024).pgn  texas(1025).pgn  texas(1026).pgn  texas(1027).pgn  texas(1028).pgn  texas(1029).pgn  texas(103).pgn  texas(1030).pgn  texas(1031).pgn  texas(1032).pgn  texas(1033).pgn  (+1481 more)
(+1016 files in other folders)
