[tool.poetry]
name = "poker-ai"
version = "0.1.0"
description = "Project made to create agents that play Poker"
authors = [
    "Lucas Colas",
    "Guillaume Hermoso"]
license = "GPL-3.0 license"
readme = "README.md"
packages = [{include = "poker_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
texasholdem = "^0.10.0"
black = "^23.3.0"
scipy = { version = "^1.10.0", python = ">=3.8,<3.12" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
